# omnibooker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/bookers/clubspark/: app_booker.py  stripe_manager.py  token_manager.py  utils.py
app/booking/: clubspark.py
app/core/: scheduler.py  settings.py
app/core/config/: base.py  better.py  clubspark.py  gymbox.py
app/models/: clubspark.py  clubspark_responses.py  stripe.py
app/tasks/: emails.py  scheduling.py
